LB-1021 Google login
iOS 13 availablity

--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1962,29 +1962,37 @@
 "contact_sync_storage_fail_cont_button" = "Fortsetzen";
 "save_to_my_lifebox_full_storage_title" = "iPhone-Speicher Voll";
 "save_to_my_lifebox_full_storage_body" = "Sie können Speicherplatz auf diesem iPhone freigeben, indem Sie Ihren Speicherplatz in den Einstellungen verwalten.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Karte";
+"map_location_detail_header" = "Fotos an Diesem Standort";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Bitte geben Sie mindestens 1 Feld ein, um Ihr Konto einfach wiederherzustellen, wenn Sie Ihr Passwort vergessen haben";
 "security_popup_header" = "Legen Sie Ihre Wiederherstellungs-E-Mail oder Sicherheitsfrage fest";
 "save_to_my_billo" = "In Mein Billo Speichern";
 "save_to_my_billo_download" = "Möchten Sie Billo Datei herunterladen - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Anmeldung mit Google";
+"on_boarding_or" = "oder";
+"on_boarding_btn_apple_login" = "Anmeldung mit Apple";
+"google_login_user_exists_body" = "Unter der E-Mail-Adresse %@ ist ein lifebox-Konto registriert. Um Ihre Google-Login-ID mit einem bestehenden lifebox-Konto zu verknüpfen, müssen Sie zuerst Ihr lifebox-Passwort eingeben.";
+"settings_googe_apple_connect" = "Anmeldeoptionen";
+"settings_googe" = "Melden Sie sich mit der Google-ID an";
+"settings_apple" = "Melden Sie sich mit der Apple-ID an";
+"settings_google_password_required" = "Um die Google ID-Anmeldung zu deaktivieren, müssen Sie zuerst ein lifebox-Passwort festlegen.";
+"settings_google_apple_connect" = "Anmeldeoptionen";
+"settings_google" = "Melden Sie sich mit der Google-ID an";
+"settings_change_password_google_warning" = "Um Ihr Passwort zu ändern, müssen Sie sich mit Ihrer Google-ID bei Ihrem lifebox-Konto anmelden.";
+"settings_change_password_apple_warning" = "Um Ihr Passwort zu ändern, müssen Sie sich mit Ihrer Apple-ID bei lifebox anmelden.";
+"settings_change_password_apple_google_warning" = "Um Ihr Passwort zu ändern, müssen Sie sich mit Ihrer Google-ID oder Apple-ID bei lifebox anmelden.";
+"settings_googe_apple_set_password" = "Passwort für lifebox festlegen";
+"settings_google_apple_mail_match_error" = "Um Ihr Konto mit lifebox zu verbinden, muss Ihre E-Mail-Adresse auf allen Plattformen gleich sein.";
+"googe_apple_login_invalid_token" = "Ungültiger Anmeldeversuch, bitte überprüfen Sie Ihre Anmeldedaten und versuchen Sie es erneut.";
+"settings_google_apple_empty_mail_error" = "Sie müssen Ihrem Konto eine E-Mail-Adresse hinzufügen.";
+"password_change_external_auth_required_error" = "Um Ihr Passwort zu ändern, können Sie sich entweder mit Ihrer Google-ID/Apple-ID bei Ihrem lifebox-Konto anmelden oder den Anweisungen „Passwort vergessen“ auf dem Anmeldebildschirm folgen.";
+"password_change_forgot_password_required_error" = "Um Ihr Passwort zu ändern, müssen Sie sich zuerst von Ihrem Konto abmelden und den Anweisungen Passwort Vergessen auf dem Anmeldebildschirm folgen.";
+"kvkk_toggle_desc" = "Zustimmung zur Verarbeitung Personenbezogener Daten";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Ich stimme der Verarbeitung meiner personenbezogenen Daten und der Weitergabe an die in der <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Erlaubnisrichtlinie angegebenen Parteien zu </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
