--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2004,29 +2004,37 @@
 "contact_sync_storage_fail_cont_button" = "Continuar";
 "save_to_my_lifebox_full_storage_title" = "Almacenamiento De İphone Lleno";
 "save_to_my_lifebox_full_storage_body" = "Puede liberar espacio en este iPhone administrando su área de almacenamiento en Configuración.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Mapa";
+"map_location_detail_header" = "Fotos en Esta Ubicación";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Ingrese al menos 1 campo para recuperar su cuenta fácilmente cuando olvidó su contraseña";
 "security_popup_header" = "Configure su Correo electrónico de Recuperación o Pregunta de Seguridad";
 "save_to_my_billo" = "Guardar en Billo";
 "save_to_my_billo_download" = "Desea descargar el archivo Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Inicia Sesión Con Google";
+"on_boarding_or" = "o";
+"on_boarding_btn_apple_login" = "Iniciar Sesión Con Apple";
+"google_login_user_exists_body" = "Se encuentra una cuenta registrada existente con %@ correo electrónico. Para conectar la ID de inicio de sesión de Google con su cuenta de lifebox existente, primero debe ingresar su contraseña de lifebox.";
+"settings_googe_apple_connect" = "Opciones de İnicio de Sesión";
+"settings_googe" = "Inicia Sesión Con Google";
+"settings_apple" = "Iniciar Sesión Con Apple";
+"settings_google_password_required" = "Para desactivar el inicio de sesión de ID de Google, primero debe establecer una contraseña de lifebox.";
+"settings_google_apple_connect" = "Opciones de İnicio de Sesión";
+"settings_google" = "Inicia Sesión Con Google";
+"settings_change_password_google_warning" = "Para cambiar su contraseña, debe iniciar sesión en su cuenta de lifebox con su ID de Google.";
+"settings_change_password_apple_warning" = "Para cambiar su contraseña, debe iniciar sesión en lifebox con su ID de Apple.";
+"settings_change_password_apple_google_warning" = "Para cambiar su contraseña, debe iniciar sesión en lifebox con su ID de Google o ID de Apple.";
+"settings_googe_apple_set_password" = "Establecer contraseña para lifebox";
+"settings_google_apple_mail_match_error" = "Para conectar su cuenta a lifebox, su dirección de correo electrónico debe ser la misma en todas las plataformas.";
+"googe_apple_login_invalid_token" = "Intento de inicio de sesión no válido, verifique sus credenciales y vuelva a intentarlo.";
+"settings_google_apple_empty_mail_error" = "Debe agregar una dirección de correo electrónico a su cuenta.";
+"password_change_external_auth_required_error" = "Para cambiar su contraseña, puede iniciar sesión en su cuenta de lifebox con su ID de Google/ID de Apple o seguir las instrucciones de contraseña olvidada en la pantalla de inicio de sesión.";
+"password_change_forgot_password_required_error" = "Para cambiar su contraseña, primero debe cerrar sesión en su cuenta y seguir las instrucciones de \"Olvidé mi Contraseña\" en la pantalla de inicio de sesión.";
+"kvkk_toggle_desc" = "Consentimiento de Procesamiento de Datos Personales";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Doy mi consentimiento para el procesamiento de mis datos personales y la transferencia a las partes especificadas en la <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Política de Permisos </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
