--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2267,29 +2267,37 @@ Please check I have understood the intended command here*/
 "contact_sync_storage_fail_cont_button" = "Continuer";
 "save_to_my_lifebox_full_storage_title" = "Stockage Complet de l'iPhone";
 "save_to_my_lifebox_full_storage_body" = "Vous pouvez libérer de l'espace sur cet iPhone en gérant votre espace de stockage dans Paramètres.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Carte";
+"map_location_detail_header" = "Photos à Cet Endroit";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Veuillez saisir au moins 1 champ pour récupérer facilement votre compte lorsque vous avez oublié votre mot de passe";
 "security_popup_header" = "Définissez votre E-mail de Récupération ou Votre Question de Sécurité";
 "save_to_my_billo" = "Enregistrer dans Billo";
 "save_to_my_billo_download" = "Voulez-vous télécharger le fichier Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Connectez-Vous Avec Google";
+"on_boarding_or" = "ou alors";
+"on_boarding_btn_apple_login" = "Connectez-Vous Avec Apple";
+"google_login_user_exists_body" = "Il existe un compte lifebox enregistré à l'adresse e-mail %@. Afin de lier votre identifiant de connexion Google à un compte lifebox existant, vous devez d'abord entrer votre mot de passe lifebox.";
+"settings_googe_apple_connect" = "Options de Connexion";
+"settings_googe" = "Connectez-Vous Avec Google";
+"settings_apple" = "Connectez-Vous Avec Apple";
+"settings_google_password_required" = "Pour désactiver Google ID Login, vous devez d'abord définir un mot de passe lifebox.";
+"settings_google_apple_connect" = "Options de Connexion";
+"settings_google" = "Connectez-Vous Avec Google";
+"settings_change_password_google_warning" = "Pour changer votre mot de passe, vous devez vous connecter à votre compte lifebox avec votre identifiant Google.";
+"settings_change_password_apple_warning" = "Pour changer votre mot de passe, vous devez vous connecter à lifebox en utilisant votre identifiant Apple.";
+"settings_change_password_apple_google_warning" = "Pour changer votre mot de passe, vous devez vous connecter à lifebox avec votre identifiant Google ou votre identifiant Apple.";
+"settings_googe_apple_set_password" = "Définir le mot de passe pour lifebox";
+"settings_google_apple_mail_match_error" = "Pour connecter votre compte à lifebox, votre adresse e-mail doit être la même sur toutes les plateformes.";
+"googe_apple_login_invalid_token" = "Tentative de connexion invalide, veuillez vérifier vos informations d'identification et réessayer.";
+"settings_google_apple_empty_mail_error" = "Vous devez ajouter une adresse e-mail à votre compte.";
+"password_change_external_auth_required_error" = "Pour modifier votre mot de passe, vous pouvez soit vous connecter à votre compte lifebox à l'aide de votre identifiant Google/identifiant Apple, soit suivre les instructions relatives au mot de passe oublié sur l'écran de connexion.";
+"password_change_forgot_password_required_error" = "Pour changer votre mot de passe, vous devez d'abord vous déconnecter de votre compte et suivre les instructions \"Mot de passe oublié\" sur l'écran de connexion.";
+"kvkk_toggle_desc" = "Consentement Au Traitement Des Données Personnelles";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Je consens au traitement de mes données personnelles et au transfert aux parties spécifiées dans la <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Politique d'autorisation </a> . </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
