--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1000,7 +1000,7 @@
 "create_story_pop_up_message" = "Hikayeni hazırlıyoruz. Hazır olduğunda Hikayeler albümünde bulabilirsin.";
 "create_story_path_to_story" = "Fotoğraflar & Videolar > Hikayeler";
 "You can not share empty album" = "Boş bir albümü paylaşamazsın";
-"etk_permission_description" = "<p><a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\">Lifecell Bulut &Ccedil;&ouml;z&uuml;mleri A.Ş., Lifecell Dijital Servisler ve &Ccedil;&ouml;z&uuml;mler A.Ş ve Grup Şirketleri</a>&rsquo;nin avantajlı &uuml;r&uuml;n ve hizmetlerden haberdar olmak i&ccedil;in 6563 sayılı Kanun ve diğer ilgili mevzuat uyarınca aksi tarafımca belirtilene kadar <u>ticari elektronik ileti</u> almak istiyorum.</p>";
+"etk_permission_description" = "Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri'nin avantajlı ürün ve hizmetlerden haberdar olmak için 6563 sayılı Kanun ve diğer ilgili mevzuat uyarınca aksi tarafımca belirtilene kadar ticari elektronik ileti almak istiyorum.";
 "global_permission_title_label" = "Global Veri Paylaşımı";
 "global_permission_description" = "Kişisel verilerimin ilgili operatörün lifebox’a yönelik avantajlı hizmetlerinden faydalanabilmem için Turkcell tarafından bulunduğum ülkede işbirliği yapılan operatörle paylaşılmasına izin veriyorum.";
 "terms_and_use_etk_checkbox_header" = "Ticari Elektronik İleti ve Veri İzni metnini okudum ve kabul ediyorum.";
@@ -1986,7 +1986,7 @@
 "save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
 "places_map_title" = "Harita";
 "map_location_detail_header" = "Bu Konumdaki Fotoğraflar";
-"beeline_feature_cancel_TC" = "";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Şifreni unutman halinde hesabını kolayca kurtarabilmek için lütfen en az 1 alanı gir";
 "security_popup_header" = "Kurtarma E-postanı ya da Güvenlik Sorunu Belirle";
 "save_to_my_billo" = "Billo'ya Kaydet";
@@ -2001,12 +2001,20 @@
 "settings_google_password_required" = "Google Hesabı ile Giriş tercihini kapatabilmen için öncelikle lifebox şifresi belirlemen gerekiyor.";
 "settings_google_apple_connect" = "Giriş Yöntemi";
 "settings_google" = "Google Hesabı ile Giriş";
-"settings_change_password_google_warning" = "Şifreni değiştirebilmen için önce Google Login yapmalısın";
-"settings_change_password_apple_warning" = "Şifreni değiştirebilmen için önce Apple Login yapmalısın";
-"settings_change_password_apple_google_warning" = "Şifreni değiştirebilmen için önce Google veya Apple Login yapmalısın\n";
+"settings_change_password_google_warning" = "Şifreni yenileyebilmen için öncelikle Google Hesabın ile lifebox’a giriş yapmalısın.";
+"settings_change_password_apple_warning" = "Şifreni yenileyebilmen için öncelikle Apple Hesabın ile lifebox’a giriş yapmalısın.";
+"settings_change_password_apple_google_warning" = "Şifreni yenileyebilmen için öncelikle Google veya Apple Hesabın ile lifebox’a giriş yapmalısın.";
 "settings_googe_apple_set_password" = "Lifebox şifresi belirle";
-"settings_google_apple_mail_match_error" = "Profil e-postanız ile bağlamak istediğiniz epostanız aynı olmalıdır";
-"googe_apple_login_invalid_token" = "Geçersiz token, tekrar deneyin";
-"settings_google_apple_empty_mail_error" = "Profil mailinizi girmeniz gerekmektedir.";
-"password_change_external_auth_required_error" = "Şifre değiştirebilmek için bağlı hesaplar altından geçerli bir token almanız gerekmektedir";
-"password_change_forgot_password_required_error" = "Şifrenizi şifremi unuttum akışı üzerinden belirleyebilirsiniz";
+"settings_google_apple_mail_match_error" = "Bağlamak istediğin hesabına ait e-posta adresin ile lifebox profilindeki e-posta adresin aynı olmalıdır.";
+"googe_apple_login_invalid_token" = "Geçersiz giriş, lütfen bilgilerinizi kontrol edip yeniden deneyin.";
+"settings_google_apple_empty_mail_error" = "Hesabına e-posta adresi eklemen gerekmektedir.";
+"password_change_external_auth_required_error" = "Şifreni yenileyebilmen için Google veya Apple hesabın ile lifebox’a giriş yapmalı ya da giriş sayfasındaki Şifremi Unuttum adımlarını takip etmelisin.";
+"password_change_forgot_password_required_error" = "Şifreni yenileyebilmen için öncelikle hesabından çıkış yapmalı ve giriş sayfasındaki Şifremi Unuttum adımlarını takip etmelisin.\n";
+"kvkk_toggle_desc" = "Kişisel Veri İşleme İzni";
+"kvkk_toggle_text" = "%@ tarafından kişisel verilerimin işlenmesini ve %@'nda belirtilen taraflarla paylaşılmasına onay veriyorum.";
+"security_popup_warning_header" = "Girmiş olduğun bilgilerden biri hatalı";
+"security_popup_warning_body1" = "Güvenlik sorun başarı ile kaydedildi, kurtarma e-postası için aşağıdaki hata alındı:";
+"security_popup_warning_body2" = "Kurtarma e-postası başarı ile kaydedildi, güvenlik sorun için aşağıdaki hata alındı:";
+"security_popup_warning_footer" = "Dilersen ayarlarsan kurtarma postasını tekrar girebilirsin.";
+"kvkk_firms_link" = "Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri";
+"kvkk_commercial_info_link" = "İzin Politikası";
