--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1974,29 +1974,37 @@
 "contact_sync_storage_fail_cont_button" = "متابعة";
 "save_to_my_lifebox_full_storage_title" = "مساحة تخزين iPhone ممتلئة";
 "save_to_my_lifebox_full_storage_body" = "يمكنك تفريغ مساحة على جهاز iPhone هذا عن طريق إدارة مساحة التخزين الخاصة بك في الإعدادات.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "خريطة";
+"map_location_detail_header" = "صور في هذا المكان";
+"beeline_feature_cancel_TC" = "تسجيل الدخول باستخدام Google";
 "security_popup_body" = "الرجاء إدخال حقل 1 على الأقل لاستعادة حسابك بسهولة عندما نسيت كلمة المرور الخاصة بك";
 "security_popup_header" = "تعيين البريد الإلكتروني الاسترداد أو سؤال الأمان";
 "save_to_my_billo" = "حفظ في Billo";
 "save_to_my_billo_download" = "هل تريد تحميل Billo ملف -%@  - %@.zip ?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "تسجيل الدخول باستخدام Google";
+"on_boarding_or" = "أو";
+"on_boarding_btn_apple_login" = "تسجيل الدخول باستخدام Apple";
+"google_login_user_exists_body" = "يوجد حساب lifebox مسجل بعنوان البريد الإلكتروني%@. لتوصيل طريقة تسجيل الدخول إلى حساب Google بحساب lifebox الحالي ، يجب عليك أولاً إدخال كلمة مرور lifebox الخاصة بك.";
+"settings_googe_apple_connect" = "خيارات تسجيل الدخول";
+"settings_googe" = "تسجيل الدخول باستخدام Google";
+"settings_apple" = "تسجيل الدخول باستخدام Apple";
+"settings_google_password_required" = "لإيقاف تفضيل تسجيل الدخول باستخدام حساب Google ، يجب عليك أولاً تعيين كلمة مرور lifebox.";
+"settings_google_apple_connect" = "خيارات تسجيل الدخول";
+"settings_google" = "تسجيل الدخول باستخدام Google";
+"settings_change_password_google_warning" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك تسجيل الدخول إلى حساب lifebox الخاص بك باستخدام معرف Google الخاص بك.";
+"settings_change_password_apple_warning" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك تسجيل الدخول إلى lifebox باستخدام معرف Apple الخاص بك.";
+"settings_change_password_apple_google_warning" = "لتغيير كلمة المرور الخاصة بك ، تحتاج إلى تسجيل الدخول إلى lifebox باستخدام معرف Google أو معرف Apple الخاص بك.";
+"settings_googe_apple_set_password" = "تعيين كلمة مرور Lifebox";
+"settings_google_apple_mail_match_error" = "لربط حسابك بـ lifebox ، يجب أن يكون عنوان بريدك الإلكتروني هو نفسه على كل نظام أساسي.";
+"googe_apple_login_invalid_token" = "محاولة تسجيل الدخول غير صحيحة ، يرجى التحقق من بيانات الاعتماد الخاصة بك والمحاولة مرة أخرى.";
+"settings_google_apple_empty_mail_error" = "يجب عليك إضافة عنوان بريد إلكتروني إلى حسابك.";
+"password_change_external_auth_required_error" = "لتغيير كلمة المرور الخاصة بك ، يمكنك إما تسجيل الدخول إلى حساب lifebox الخاص بك باستخدام معرف Google / معرف Apple الخاص بك أو اتباع تعليمات كلمة المرور المنسية على شاشة تسجيل الدخول.";
+"password_change_forgot_password_required_error" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك أولاً تسجيل الخروج من حسابك واتباع إرشادات \"نسيت كلمة المرور\" على شاشة تسجيل الدخول.";
+"kvkk_toggle_desc" = "الموافقة على معالجة البيانات الشخصية";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş.، Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> أوافق على معالجة بياناتي الشخصية ونقلها إلى الأطراف المحددة في <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> سياسة الأذونات </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
