--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1964,29 +1964,37 @@
 "contact_sync_storage_fail_cont_button" = "Продовжуй";
 "save_to_my_lifebox_full_storage_title" = "Пам'ять iPhone Повна";
 "save_to_my_lifebox_full_storage_body" = "Ви можете звільнити місце на цьому iPhone, керуючи зберіганням у Налаштуваннях.";
-"places_map_title" = "";
-"map_location_detail_header" = "";
-"beeline_feature_cancel_TC" = "";
+"places_map_title" = "Мапа";
+"map_location_detail_header" = "Фотографії в Цьому Місці";
+"beeline_feature_cancel_TC" = "Beeline";
 "security_popup_body" = "Будь ласка, введіть принаймні 1 поле, щоб легко відновити свій обліковий запис, якщо ви забули свій пароль";
 "security_popup_header" = "Вкажіть адресу Електронної Пошти Відновлення або Секретне Питання";
 "save_to_my_billo" = "Зберегти в Billo";
 "save_to_my_billo_download" = "Ви хочете завантажити файл Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "";
-"on_boarding_or" = "";
-"on_boarding_btn_apple_login" = "";
-"google_login_user_exists_body" = "";
-"settings_googe_apple_connect" = "";
-"settings_googe" = "";
-"settings_apple" = "";
-"settings_google_password_required" = "";
-"settings_google_apple_connect" = "";
-"settings_google" = "";
-"settings_change_password_google_warning" = "";
-"settings_change_password_apple_warning" = "";
-"settings_change_password_apple_google_warning" = "";
-"settings_googe_apple_set_password" = "";
-"settings_google_apple_mail_match_error" = "";
-"googe_apple_login_invalid_token" = "";
-"settings_google_apple_empty_mail_error" = "";
-"password_change_external_auth_required_error" = "";
-"password_change_forgot_password_required_error" = "";
+"on_boarding_btn_google_login" = "Увійти Через Google";
+"on_boarding_or" = "або";
+"on_boarding_btn_apple_login" = "Увійти Через Apple";
+"google_login_user_exists_body" = "Є обліковий запис lifebox, зареєстрований на адресу електронної пошти %@. Щоб зв'язати ідентифікатор входу Google з наявним обліковим записом lifebox, ви повинні спочатку ввести пароль lifebox.";
+"settings_googe_apple_connect" = "Параметри Входу";
+"settings_googe" = "Увійти з Обліковим Записом Google";
+"settings_apple" = "Увійти з Обліковим Записом Apple";
+"settings_google_password_required" = "Щоб вимкнути вхід через Google ID, необхідно встановити пароль lifebox.";
+"settings_google_apple_connect" = "Параметри Входу";
+"settings_google" = "Увійти з Обліковим Записом Google";
+"settings_change_password_google_warning" = "Щоб змінити пароль, ви повинні увійти до свого облікового запису lifebox за допомогою Google ID.";
+"settings_change_password_apple_warning" = "Щоб змінити пароль, ви повинні увійти в lifebox, використовуючи Apple ID.";
+"settings_change_password_apple_google_warning" = "Щоб змінити пароль, вам необхідно увійти в lifebox за допомогою Google ID або Apple ID.";
+"settings_googe_apple_set_password" = "Встановити Пароль для lifebox";
+"settings_google_apple_mail_match_error" = "Для підключення вашого облікового запису до lifebox ваша адреса електронної пошти повинна бути однаковою на кожній платформі.";
+"googe_apple_login_invalid_token" = "Невірна спроба входу в систему, перевірте свої облікові дані та повторіть спробу.";
+"settings_google_apple_empty_mail_error" = "Ви повинні додати адресу електронної пошти до свого облікового запису.";
+"password_change_external_auth_required_error" = "Щоб змінити свій пароль, ви можете або увійти до свого облікового запису lifebox, використовуючи свій ідентифікатор Google ID/Apple ID, або дотримуватися вказівок із забутого паролю на екрані входу в систему.";
+"password_change_forgot_password_required_error" = "Щоб змінити свій пароль, ви повинні спочатку вийти зі свого облікового запису та дотримуватися вказівок «Забув Пароль» на екрані входу до системи.";
+"kvkk_toggle_desc" = "Згода на Обробку Персональних Даних";
+"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Я даю згоду на обробку моїх персональних даних та передачу їх сторонам, зазначеним у <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Політика Дозвіл </a>. </span></p>";
+"security_popup_warning_header" = "";
+"security_popup_warning_body1" = "";
+"security_popup_warning_body2" = "";
+"security_popup_warning_footer" = "";
+"kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
