--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1004,7 +1004,7 @@
 "create_story_pop_up_message" = "تم إنشاء عرض شرائح الصور";
 "create_story_path_to_story" = "الصور & الفيديوهات>حكاياتي";
 "You can not share empty album" = ". لا يمكنك مشاركة ألبوم فارغ";
-"etk_permission_description" = "وفقًا للقانون رقم 6563 والتشريعات الأخرى ذات الصلة بشأن المنتجات والخدمات المفيدة لشركات تركسل وشركات المجتمع ،أوافق على إرسال الرسائل التجارية الإلكترونية بهدف تبليغ المعلومات وهذا إذا لم يصدر من قبلي أمر بخلاف ذلك وفي حالة وجود طلب يخالف هذا";
+"etk_permission_description" = "";
 "global_permission_title_label" = "إذن البيانات العالمية";
 "global_permission_description" = "  أوافق على مشاركة معلوماتي الشخصية مع المشغل الذي يقوم بعمل مشترك من قبل توركسل من أجل الإستفادة من الخدمات المميزة للمشغلين المتعلقة بمستخدم لايف بوكس";
 "terms_and_use_etk_checkbox_header" = "رسالة إلكترونية تجارية";
@@ -1505,7 +1505,7 @@
 "import_from_facebook_started" = "بدأ التحويل من الفيس بوك.";
 "instapick_hashtags_copied" = "تم نسخ علمات التصنيف.";
 "create_story_selection_limit" = "يرجى تحديد %d صور كحد أقصى.";
-"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"etk_html" = "";
 "free_up_space_alert_title" = "افتح مكان بهاتفك.";
 "free_up_space_no_duplicates" = "ليس لديك صور / مقاطع فيديو مكررة.";
 "free_up_space_in_progress" = "قائمة الملفات المتكررة الخاصة بك ليست جاهزة بعد , يرجى المحاولة لاحقًا.";
@@ -2000,10 +2000,13 @@
 "settings_google_apple_empty_mail_error" = "يجب عليك إضافة عنوان بريد إلكتروني إلى حسابك.";
 "password_change_external_auth_required_error" = "لتغيير كلمة المرور الخاصة بك ، يمكنك إما تسجيل الدخول إلى حساب lifebox الخاص بك باستخدام معرف Google / معرف Apple الخاص بك أو اتباع تعليمات كلمة المرور المنسية على شاشة تسجيل الدخول.";
 "password_change_forgot_password_required_error" = "لتغيير كلمة المرور الخاصة بك ، يجب عليك أولاً تسجيل الخروج من حسابك واتباع إرشادات \"نسيت كلمة المرور\" على شاشة تسجيل الدخول.";
-"kvkk_toggle_desc" = "الموافقة على معالجة البيانات الشخصية";
-"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş.، Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> أوافق على معالجة بياناتي الشخصية ونقلها إلى الأطراف المحددة في <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> سياسة الأذونات </a>. </span></p>";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
 "security_popup_warning_header" = "";
 "security_popup_warning_body1" = "";
 "security_popup_warning_body2" = "";
 "security_popup_warning_footer" = "";
 "kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"apple_login_user_exists_body" = "";
+"settings_apple_password_required" = "";
