--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1035,7 +1035,7 @@
 "create_story_pop_up_message" = "Jemi duke përgatitur historinë tuaj. Në mbarim të saj, ju mund ta aksesoni atë nga Albumi i Videove.";
 "create_story_path_to_story" = "Foto & Video> Historitë e mia";
 "You can not share empty album" = "Nuk mund të ndani albumin bosh.";
-"etk_permission_description" = "Unë jap pëlqimin tim për marrjen e mesazheve komerciale në mënyrë që të informohem për produktet dhe shërbimet e favorshme të Turkcell dhe kompanive të saj të grupit përveç dhe derisa të kërkoj ndryshe, në pajtim me Ligjin Nr. 6563 dhe legjislacionin në fuqi.";
+"etk_permission_description" = "";
 "global_permission_title_label" = "Leja e të dhënave globale";
 "global_permission_description" = "Unë pranoj që informacioni im personal të ndahet me operatorët e bashkëpunimit me Turkcell në mënyrë që unë të shfrytëzoj shërbimet e dobishme të operatorit përkatës në lidhje me Lifebox. ";
 "terms_and_use_etk_checkbox_header" = "Mesazh Elektronik Komercial";
@@ -1536,7 +1536,7 @@
 "import_from_facebook_started" = "Transferimi filloi nga Facebook.";
 "instapick_hashtags_copied" = "Hashtaget janë kopjuar.";
 "create_story_selection_limit" = "Të lutem, zgjidhe %d fotografi maksimale.";
-"etk_html" = "<p><b> COMMERCIAL ELECTRONIC MESSAGE AND DATA CONSENT</b></p>\n\n<p>I hereby consent to allow Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. and <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/genel-bakis/istiraklerimiz\">Group Companies</a> to process my personal data and share them with the parties listed in the Permission Policy and send me commercial electronic messages in line with the “Permission Policy” <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">available here</a> unless requested otherwise by me as per Law No. 6563 and other applicable regulations for the purposes of informing me on discounts, deals and special offers, which are in accordance with my needs and preferences regarding the products and services of these companies. I acknowledge that I can revoke my consent for processing/sharing of my personal data or receiving commercial electronic mails and detailed information on the scope and revocation of such consent are available within the scope of the <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/veribilgi-isleme-izni\">\"Permission Policy\"</a>.   </p> \n";
+"etk_html" = "";
 "free_up_space_alert_title" = "Liro hapësirë në telefonin tënd.";
 "free_up_space_no_duplicates" = "Nuk ke foto / video të përsëritur.";
 "free_up_space_in_progress" = "Lista jote e skedarëve të përsëritura  nuk është ende gati, Të  lutem,  provoje  më vonë.";
@@ -2031,10 +2031,13 @@
 "settings_google_apple_empty_mail_error" = "Duhet të shtoni një adresë emaili në llogarinë tuaj.";
 "password_change_external_auth_required_error" = "Për të ndryshuar fjalëkalimin tuaj, ose mund të identifikoheni në llogarinë tuaj lifebox duke përdorur ID-në tuaj të Google/Apple ID ose të ndiqni udhëzimet e fjalëkalimit të harruar në ekranin e identifikimit.";
 "password_change_forgot_password_required_error" = "Për të ndryshuar fjalëkalimin, fillimisht duhet të dilni nga llogaria juaj dhe të ndiqni udhëzimet \"Harrova Fjalëkalimin\" në ekranin e hyrjes.";
-"kvkk_toggle_desc" = "Pëlqimi për Përpunimin e të Dhënave Personale";
-"kvkk_toggle_text" = "<p style=\"background: white; margin: 0in 0in 10.5pt 0in;\"><span lang=\"TR\" style=\"font-size: 11.5pt; font-family: 'Helvetica Neue'; color: #104142;\"> <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Lifecell Bulut Çözümleri A.Ş., Lifecell Dijital Servisler ve Çözümler A.Ş ve Grup Şirketleri </a> Unë pranoj përpunimin e të dhënave të mia personale dhe transferimin te palët e specifikuara në <a href=\"https://www.turkcell.com.tr/tr/hakkimizda/duyurular/izin-politikasi\"> Politikën e Lejes </a>. </span></p>";
+"kvkk_toggle_desc" = "";
+"kvkk_toggle_text" = "";
 "security_popup_warning_header" = "";
 "security_popup_warning_body1" = "";
 "security_popup_warning_body2" = "";
 "security_popup_warning_footer" = "";
 "kvkk_firms_link" = "";
+"kvkk_commercial_info_link" = "";
+"apple_login_user_exists_body" = "";
+"settings_apple_password_required" = "";
