--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2303,3 +2303,4 @@ Please check I have understood the intended command here*/
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_show_mail_warning" = "";
