--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2000,3 +2000,4 @@
 "kvkk_commercial_info_link" = "";
 "apple_login_user_exists_body" = "";
 "settings_apple_password_required" = "";
+"apple_login_show_mail_warning" = "";
